[package]
name = "mpl-common-constants"
version = "0.1.0"
edition = "2021"

[dependencies]
# use solana program but not sdk because this crate
# may be imported to Solana programs
solana-program = "1.18.15"
bs58 = { version = "0.5.1", optional = true}

[features]
devnet = []
mainnet = []

[lib]
name = "mpl_common_constants"
path = "src/lib.rs"

[[bin]]
name = "mpl_common_constants"
path = "src/bin/main.rs"
required-features = ["bs58"]

